
name:                eta-bouncycastle
version:             0.1.0.0
synopsis:            Bindings for Java Bouncycastle crypto library
-- description:
license:             BSD3
license-file:        LICENSE
author:              Jyothsna Patnam
maintainer:          jyothsnasrinivas17@gmail.com
-- copyright:
category:            Security
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Java.Bouncycastle.Crypto
                       Java.Bouncycastle.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
